z-index of side-nav fixed

--- a/css/componenets/sidenav.css
+++ b/css/componenets/sidenav.css
@@ -7,7 +7,8 @@
   text-decoration: none;
   font-size: 20px;
   color: white;
-  border-radius: px;
+  /* border-radius: px; */
+  z-index: 999;
 }
 #mySidenav a:hover {
   left: 0;
